<?xml version="1.0"?>
<package>
  <name>rtt_rosdeployment</name>
  <version>2.9.0</version>
  <description>rtt_rosdeployment provides an RTT plugin to control an ocl deployment component over ROS service calls.</description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_integration</url>
  <url type="bugtracker">https://github.com/orocos/rtt_ros_integration/issues</url>

  <author email="jbo@jhu.edu">Jonthan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_ros_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <!--
        rtt_ros_msgs is not an RTT plugin
        <plugin_depend>rtt_ros_msgs</plugin_depend>
      -->
    </rtt_ros>
  </export>
</package>
