<?xml version="1.0"?>
<package>
  <name>rtt_rosnode</name>
  <version>2.8.6</version>
  <description>
    This package provides an RTT plugin to add a ROS node to the RTT process.
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_integration</url>
  <url type="bugtracker">https://github.com/orocos/rtt_ros_integration/issues</url>

  <author>Ruben Smits</author>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>roscpp</run_depend>
  
</package>
