<?xml version="1.0"?>
<package>
  <name>rtt_rosparam</name>
  <version>2.6.0</version>
  <description>
    The rtt_rosparam package
  </description>

  <author>Ruben Smits</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rtt_rosparam</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_rospack</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ocl</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_rospack</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ocl</run_depend>

  <export>
  </export>
</package>
