<?xml version="1.0"?>
<package>
  <name>rtt_rosparam</name>
  <version>2.7.0</version>
  <description>
    The rtt_rosparam package
  </description>

  <author>Ruben Smits</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rtt_rosparam</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>roscpp</run_depend>
  
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>
</package>
