<?xml version="1.0"?>
<package>
  <name>rtt_rosservice</name>
  <version>2.6.0</version>
  <description>The rtt_rosservice package</description>

  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <author email="jbo@jhu.edu">Jonathan Bohren</author>

  <license>BSD</license>

  <url>http://ros.org/wiki/rtt_rosservice</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ocl</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_rospack</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>ocl</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rospack</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
